--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 deploy.ant.properties.file=C:\\Users\\xingjianyuan\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
 j2ee.server.home=C:/tomcat-8
 j2ee.server.instance=tomcat80:home=C:\\tomcat-8
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\xingjianyuan\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
